# brf-helper

./: .gitignore  CLI_USAGE.md  DATABASE_ARCHITECTURE.md  README.md  app.py  main.py  pyproject.toml  run_api.py
brf_helper/: cli.py
brf_helper/analysis/: __init__.py  brf_analyzer.py  brf_comparator.py  metrics_extractor.py  question_templates.py  red_flag_detector.py
brf_helper/api/: dependencies.py  main.py  models.py
brf_helper/database/: __init__.py  db.py  models.py  schema.sql
brf_helper/etl/: document_processor.py  hybrid_retrieval.py  pdf_reader.py  text_chunker.py  vector_store.py
brf_helper/llm/: chat_model.py  embeddings.py  rag_interface.py
chroma_db/: chroma.sqlite3
data/: brf_analysis.db
examples/: demo_cli_analyze.py  ingest_documents.py  query_brf.py  test_api.py  test_red_flags.py
tests/: test_api.py  test_embeddings.py  test_etl.py  test_vector_store.py
